<resources>
    <string name="app_name">CashOcean</string>
    <string name="facebook_app_id">759209131210286</string>
    <string name="fb_login_protocol_scheme">fb759209131210286</string>
    <string name="please_input_code">Please Enter Verification Code</string>
    <string name="informasi">Verification Information</string>
    <string name="smoothlistview_header_hint_ready">Loosen and Refresh Data</string>
    <string name="smoothlistview_header_hint_normal">Drop-down And Refresh</string>
    <string name="smoothlistview_header_hint_loading">Loading...</string>
    <string name="smoothlistview_header_last_time">Last Updating Time</string>
    <string name="smoothlistview_footer_hint_normal">View More</string>
    <string name="smoothlistview_footer_hint_ready">Loosen And Load More</string>
    <string name="home">Home</string>
    <string name="my">My</string>
    <string name="hint_to_login">You Haven\'t Logged In</string>
    <string name="please_login">Please Log In</string>
    <string name="confirm_exit_login">Do you want to log out?</string>
    <string name="confirm">Confirm</string>
    <string name="hint_title">Tips</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="please_input_name">Please Enter Name</string>
    <string name="please_input_id_num">Please Enter ID No.</string>
    <string name="please_id_photo">Please take an ID photo</string>
    <string name="please_face_photo">Please take a face photo</string>
    <string name="identity_id">ID Card</string>
    <string name="hint_click_face_photo">Please the a photo of front face</string>
    <string name="my_app">My App</string>
    <string name="about_us">About Us</string>
    <string name="exit_login">Log out</string>
    <string name="you_not_applay_app">You haven\'t applied for the App before, apply now.</string>
    <string name="click_time">Click time</string>
    <string name="estimated_amount">Estimated amount</string>
    <string name="protocol_agree_content">
        Welcome to cashmall,for reason of cashmall to protect your personal information and privacy. Please read the"Borrowing Services and Privacy Agreement"carefully before using. You need to accept these terms before you use our services.
    </string>
    <string name="comprehensive_sort">Integrated sorting</string>
    <string name="easy_pass">Easily to pass</string>
    <string name="low_interest">Low interest</string>
    <string name="sort_high_to_low">Amount descending</string>
    <string name="sort_low_to_high">Amount ascending</string>
    <string name="limit_range">Amount limit (₱)</string>
    <string name="rate">Daily interest rate (%)</string>
    <string name="applay">Apply</string>
    <string name="about_us_desc">Our company specializes in the intelligent recommendation platform in the financial field, provides more professional and better service for borrowers. We will select and match the platform that suits you, making your loan application easier and faster.</string>
    <string name="next_step">Next Step</string>
    <string name="change_the_password">Change the password</string>
    <string name="kode_verifikasi">Get the verification code</string>
    <string name="hint_please_pwd">Enter the verification code</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">No account yet?</string>
    <string name="register">Registration</string>
    <string name="lupa_akun_anda">Forget password?</string>
    <string name="hubung_kami">Change the password</string>
    <string name="other_register">Sign up with other way</string>
    <string name="give_it_a_try">Give it a try</string>
    <string name="must_self_identity">1.Must be the person is own ID card</string>
    <string name="ktp_terlihat_jelas">2.The ID photo must be clearly visible</string>
    <string name="atur_kata_sandi">Set password</string>
    <string name="exsit_please_login">Already have an account, Please login.</string>
    <string name="internet_connection_failed">Internet connection failed.</string>
    <string name="click_me_to_retry">Click me to retry!</string>
    <string name="sorry_there_was_an_error">Sorry, there was an error.</string>
    <string name="enter_valid_phone_no">Please enter valid phone number.</string>
    <string name="hint_input_phone_form">Mobile number should starts with 9</string>
    <string name="password_incomplete">Incomplete password</string>
    <string name="empty_num_phone">The phone number cannot be empty.</string>
    <string name="check_contract">Privacy Policy</string>
    <string name="password_empty">The password cannot be empty.</string>
    <string name="empty_code">The verification code cannot be empty.</string>
    <string name="service_only_suport_ph">Service only for 印尼 mobile phone numbers</string>
    <string name="open_camera_permission">"Please open the camera permission."</string>
    <string name="data_fail">Data error.Please contact customer service.</string>
    <string name="data_parsing_error">Data parsing error, please contact customer service</string>
    <string name="net_connect_fail">Internet connection failed. Please check the network.</string>
    <string name="unknown_data_hint">Unknown error, please contact customer service</string>
    <string name="custom_page_callback">custom page(Callback)</string>
    <string name="open_permission">Please open unopened permission.</string>
    <string name="regist_protocol_name">"Borrowing Services and Privacy Agreement"</string>
    <string name="quit_hint">Press again to exit</string>
    <string name="skip">Jump </string>
    <string name="identity_top_desc">The information must be true and effective, or the loan will be failed!</string>
    <string name="my_name">User\'s name</string>
    <string name="please_input">Please enter</string>
    <string name="id_type">ID type</string>
    <string name="identity_number">ID No.</string>
    <string name="hint_input_id_photo">Please take a photo of the front of ID</string>
    <string name="hint_click_photo">Click and shoot</string>
    <string name="identity_bottom_desc">Tips: Please ensure that the ID information is clear and the arms are exposed. Be careful not to cover the face.</string>
    <string name="immediately_apply">Apply now!</string>
    <string name="select_id_type">Select ID Type</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="tagalog">Tagalog</string>
    <!--2.0-->
    <string name="bookkeeping">Account</string>
    <string name="find">Find</string>
    <string name="title_bookkeep">Remind repayment</string>
    <string name="bookkeep_add_bill">Add bill</string>
    <string name="bookkeep_see_more">Check all</string>
    <string name="bookkeep_all_money">The total amount</string>
    <string name="bookkeep_should_repayment">To be repaid</string>
    <string name="bookkeep_bi">Number</string>
    <string name="bookkeeper_list">Should also list</string>
    <string name="bookkeeper_day">Countdown</string>
    <string name="bookkeeper_money">Amount</string>
    <string name="add_bill_query">Query</string>
    <string name="product_logo">Product logo</string>
    <string name="product_name">The product name</string>
    <string name="loan_amount">Loan amount</string>
    <string name="payment_time">Payment time</string>
    <string name="please_select">Please select</string>
    <string name="please_fill_in">Please fill in</string>
    <string name="add_bill">Add bill</string>
    <string name="no_bill_hint">You don\'t have the bill not yet</string>
    <string name="add_one_number">Add it now</string>
    <string name="set_repaid">Set repaid</string>
    <string name="delete">Delete</string>
    <string name="all_bill">All the bills</string>
    <string name="phone_test_hint">Mobile phone credit score evaluation is based on your device information to evaluate your credit, to give you the fastest and most accurate loan advice</string>
    <string name="phone_test">Mobile phone credit score evaluation</string>
    <string name="idcard_test">Certificate quality evaluation</string>
    <string name="phone_test_page">Phone Credit Evaluation</string>
    <string name="card_test_hint">Certificate quality evaluation can test the quality of your ID, whether it meets the requirements of most lending apps, give you the best advice!</string>
    <string name="test_card_title">ID Evaluation</string>
    <string name="see_more">See more loan products</string>
    <string name="result_hint_a">Your credit standing is excellent\nKeep it up</string>
    <string name="result_hint_b">Your credit standing is good \nKeep it up</string>
    <string name="result_hint_c">Your credit standing is average\n and you need keeo trying</string>
    <string name="billing_date">Billing date</string>
    <string name="bill_info_page">Billing details page</string>
    <string name="add_bill_please_input_appname">Please enter the app name</string>
    <string name="add_bill_please_input_repaymoney">Please enter the repayment amount</string>
    <string name="add_bill_please_select_repaytime">Please choose the time of repayment</string>
    <string name="overdue">Overdue</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="change_bill_status_repay">Are you sure you set the bill to paid back?</string>
    <string name="change_bill_status_no_repay">Are you sure you set the bill to unpaid?</string>
    <string name="change_bill_status_delete">Are you sure to delete this bill?</string>
    <string name="cardtest_no_pass_hint">Your ID cannot be identified, it is suggested to take a new photo or change your id and upload again</string>
    <string name="upload_again">Upload again</string>
    <string name="recommendation">Recommendation</string>
    <string name="have_repay">Have paid off</string>
    <string name="no_more">No more ~</string>
    <string name="please_take_card">Please take a front photo of the ID</string>
    <string name="please_take_face">Please take a picture of your face</string>
    <string name="release_time">Release time</string>
    <string name="card_test_success">Your ID will be identied, you can loan the money immediately</string>
    <string name="to_loan">Borrowing immediately</string>
</resources>
