<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rectangle_white_box_bg"
    android:orientation="vertical">

    <TextView
        style="@style/Style_Text_Size_16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/hint_title"
        android:textStyle="bold"
        android:textColor="@color/cash_mall_text_color_dark" />

    <TextView
        android:id="@+id/tv_protocol_content"
        style="@style/Style_Text_Size_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/protocol_agree_content"
        android:textColor="@color/cash_mall_text_color_dark" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cash_mall_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="0.5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_protocol_disagree"
            style="@style/Style_Text_Size_14sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:textColor="@color/cash_mall_text_color_dark"
            android:background="@drawable/shape_agreen_left"
            android:gravity="center"
            android:text="@string/cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cash_mall_bg" />

        <TextView
            android:id="@+id/tv_protocol_agree"
            style="@style/Style_Text_Size_14sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_agreen_right"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/cash_mall_text_color_dark" />
    </LinearLayout>


</LinearLayout>