<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.bill.AddBillActivity">

    <include layout="@layout/title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/font_black_6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/product_name"
            android:textColor="@color/color_black" />

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_query"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingRight="2dp">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@null"
                android:maxLength="20"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@color/main_color" />

            <TextView
                android:id="@+id/tv_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/add_bill_query"
                android:textColor="@color/color_black" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/font_black_6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/product_logo"
            android:textColor="@color/color_black"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/bg_app_name"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="A"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/font_black_6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">


        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/loan_amount"
            android:textColor="@color/color_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/tv_hint"
            android:gravity="center_vertical"
            android:text="(₱)"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/tv_fill_money"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_fill_in"
            android:inputType="number"
            android:maxLength="9"
            android:singleLine="true"
            android:textColor="@color/color_black"
            android:textSize="13sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/font_black_6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/payment_time"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/tv_select_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical|right"
            android:hint="@string/please_select"
            android:textColor="@color/color_black"
            android:textSize="13sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_add_bill"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="110dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shape_green_btn_bg"
        android:gravity="center"
        android:text="Confirm to add"
        android:textColor="#ffffffff"
        android:textSize="13sp" />
</LinearLayout>